tests/valid/bug100_3.m
:- module bug100_3.
:- interface.

:- typeclass tc2(T) where [].

:- implementation.
