tests/invalid/typeclass_test_11.m
:- module typeclass_test_11.
:- interface.

:- typeclass foo(T) <= (T =< blah(X)) where [].

